Fixed background image problem on IOS devices

--- a/styles/home.less
+++ b/styles/home.less
@@ -104,6 +104,7 @@ i.fa.fa-tablet {
 }
 
 #section5, #section7 {
+    background: #ddd url("../files/bg_suburb2.jpg") center no-repeat;
     color:#f5f5f5;
     padding-top: 100px;
     padding-bottom: 475px;
